# smol-clip

./: Cargo.toml  Readme.md
examples/: image.rs  read.rs  write.rs
src/: lib.rs
