[package]
name = "smol-clip"
version = "0.1.0"
authors = ["artur"]
edition = "2018"

[dependencies]
anyhow = "1"
x11rb = "0.8"
once_cell = "1.7.2"

[dev-dependencies]
arboard = "1"
criterion = { version = "0.3", features = ["html_reports"] }

[profile.bench]
codegen-units = 1
lto = true

[profile.release]
codegen-units = 1
lto = true

