[package]
name = "smol-clip"
version = "0.1.0"
authors = ["artur"]
edition = "2018"
resolver = "2"

[dependencies]
anyhow = "1"
arboard = "1"
log = "0.4"
once_cell = "1.7.2"
parking_lot = "0.11"
thiserror = "1"
x11rb = "0.8"
image = { version = "0.23.9", default-features = false, features = ["png"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
simple_logger = "1"

[profile.bench]
codegen-units = 1
lto = true

[profile.release]
codegen-units = 1
lto = true
